configurando para criar migrations, obs: erros

--- a/ProjetoDeBloco_FimDeSemana/appsettings.json
+++ b/ProjetoDeBloco_FimDeSemana/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data source:baseDeDados.csv"
+    "DefaultConnection": "Data Source=bancoDeDados.db"
   }
 }
